[tool.poetry]
name = "repl_python3_Harleen"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
python-dotenv = "^0.19.0"
youtube-search = "^2.1.0"
beautifulsoup4 = "^4.9.3"
google = "^3.0.0"
wikipedia = "^1.4.0"
Flask = "^2.0.1"
axju-jokes = "^1.0.3"
pyjokes = "^0.6.0"
praw = "^7.4.0"
TenGiphPy = "^2.5.0"
urllib3 = "^1.26.6"
prsaw = "^0.4.0"
youtube_dl = "^2021.6.6"
"randomstuff.py" = "^2.0.0"
waifu-py = "^1.0.3"
waifu = "^0.0.2"
"googlesearch.py" = "^1.2"
DiscordGame = "^2021.5.21"
Snake = "^0.2"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
